2005-04-07  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.
	
	* src/accounts.cpp, src/accounts.h, src/callbacks.cpp, src/config.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/main_window.cpp,
	src/pref_window.cpp, src/pref_window.h, src/sipendpoint.cpp: Moved
	the accounts preferences in their own separate window accessible
	from the Edit menu.	
	
2005-04-06  Damien Sandras  <dsandras@gnome.org>

	* src/dbus_component.cpp: Fixed double free thanks to Philippe
	Normand. (#172773)

2005-04-06  Damien Sandras  <dsandras@gnome.org>

	* lib/stats_drawing_area.c, src/main_window.cpp, src/endpoint.cpp:
	Applied patch from Stefan Bruens to optimize the code, and added
	preliminary hack for roster.
	
2005-04-04  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Adapted to new API. Fixed Auto-Answer of incoming
	calls. Added back support to pause audio and video channels, to put
	calls on hold and to transfer calls. (Requires a patch that is not in
	OPAL CVS yet).

	* src/h323endpoint.cpp, src/h323endpoint.h, src/sipendpoint.cpp,
	src/sipendpoint.h: Fixed Auto-Answer and Do Not Disturb.

	* src/pcssendpoint.cpp, src/pcssendpoint.h: Removed unuseful code and
	reorganised handling of incoming calls.

	* src/pref_window.cpp: Force the presence of a realm for 
	SIP authentication.

	* src/urlhandler.cpp: Added back call transfer.

	* src/main_window.cpp: Removed video support for now.

	* help/C/gnomemeeting.xml, help/fr/gnomemeeting.xml: Applied patch
	from Stefan Bruens for docbook compliance.

2005-03-25  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp, src/videograbber.cpp: Do not update
	the video sliders if the driver returns values of zero for all
	settings, instead reuse the former values. Thanks to
	schorpp   _@_   schorpp.dyndns.dk.

	* src/vfakeio.cpp, src/vfakeio.h: Added GetParameters function that
	returns 0 for all settings.

2005-03-21  Damien Sandras  <dsandras@gnome.org>
