@@ -954,6 +954,28 @@
       </locale>
     </schema>
     <schema>	
+      <key>/schemas/apps/@PACKAGE_NAME@/general/user_interface/accounts_window/position</key>
+      <applyto>/apps/@PACKAGE_NAME@/general/user_interface/accounts_window/position</applyto>
+      <owner>GnomeMeeting</owner>
+      <type>string</type>
+      <default>0,0</default>
+      <locale name="C">
+	<short>Position on the screen of the preferences window</short>
+	<long>Position on the screen of the preferences window</long>
+      </locale>
+    </schema>
+    <schema>	
+      <key>/schemas/apps/@PACKAGE_NAME@/general/user_interface/accounts_window/size</key>
+      <applyto>/apps/@PACKAGE_NAME@/general/user_interface/accounts_window/size</applyto>
+      <owner>GnomeMeeting</owner>
+      <type>string</type>
+      <default>-1,-1</default>
+      <locale name="C">
+	<short>Size of the preferences window</short>
+	<long>Size of the preferences window</long>
+      </locale>
+    </schema>
+    <schema>	
       <key>/schemas/apps/@PACKAGE_NAME@/general/user_interface/video_display/start_in_fullscreen</key>
       <applyto>/apps/@PACKAGE_NAME@/general/user_interface/video_display/start_in_fullscreen</applyto>
       <owner>GnomeMeeting</owner>
