@@ -8,6 +8,9 @@
 	the accounts preferences in their own separate window accessible
 	from the Edit menu.	
 	
+	* gnomemeeting.schemas.in.in: Added default values for the new
+	accounts window.
+	
 2005-04-06  Damien Sandras  <dsandras@gnome.org>
 
 	* src/dbus_component.cpp: Fixed double free thanks to Philippe
